test(api): add integration test
